@@ -1,35 +1,30 @@
 package com.backend.application.mapper;
 
-import com.backend.application.command.CreateEntryFieldCommand;
+import com.backend.application.dto.request.CreateEntryFieldRequest;
+import com.backend.application.dto.response.EntryFieldDefinitionResult;
 import com.backend.domain.entity.EntryFieldDefinition;
-import com.backend.presentation.dto.response.EntryFieldDefinitionResponse;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class EntryFieldMapper {
 
-  public EntryFieldDefinition toEntity(CreateEntryFieldCommand command) {
+  public EntryFieldDefinition toEntity(Long componentTypeId, CreateEntryFieldRequest request) {
     EntryFieldDefinition entity = new EntryFieldDefinition();
-    entity.setComponentTypeId(command.componentTypeId());
-    entity.setFieldKey(command.fieldKey());
-    entity.setFieldType(command.fieldType());
-    entity.setIsRequired(command.isRequired() != null ? command.isRequired() : false);
-    entity.setMaxLength(command.maxLength());
-    entity.setMinValue(command.minValue());
-    entity.setMaxValue(command.maxValue());
+    entity.setComponentTypeId(componentTypeId);
+    entity.setFieldKey(request.fieldKey());
+    entity.setFieldType(request.fieldType());
     return entity;
   }
 
-  public EntryFieldDefinitionResponse toResponse(EntryFieldDefinition entity) {
-    return EntryFieldDefinitionResponse.from(entity);
+  public EntryFieldDefinitionResult toResult(EntryFieldDefinition entity) {
+    return EntryFieldDefinitionResult.from(entity);
   }
 
-  public List<EntryFieldDefinitionResponse> toResponseList(List<EntryFieldDefinition> entities) {
+  public List<EntryFieldDefinitionResult> toResultList(List<EntryFieldDefinition> entities) {
     return entities.stream()
-        .map(this::toResponse)
-        .collect(Collectors.toList());
+        .map(this::toResult)
+        .toList();
   }
 }
